# ansible-collection-sdwan-deployment

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  galaxy.yml  pyproject.toml  requirements.txt  requirements.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: galaxy-importer.yml  linters.yml  release-from-tag.yml  requirements.yml
docs/: CONTRIBUTING.md  SECURITY.md
meta/: runtime.yml
playbooks/: aws_deploy_controllers.yml  aws_deploy_edges.yml  aws_sdwan_config.yml  aws_sdwan_config_20_12.yml  aws_sdwan_config_20_13.yml  aws_teardown.yml  aws_teardown_20_12.yml  aws_teardown_only_edges.yml  azure_deploy_controllers.yml  azure_deploy_edges.yml  azure_sdwan_config.yml  azure_teardown.yml  deploy_controllers_20_12.yml  deploy_controllers_20_13.yml  deploy_edges_20_12.yml  sdwan_config_20_12.yml  sdwan_config_20_13.yml  specific_edges_to_teardown.yml  teardown_20_12.yml  teardown_20_13.yml  teardown_only_edges.yml  template_cloudinit.yml  template_cloudinit_config.yml
roles/aws_controllers/: README.md
roles/aws_controllers/defaults/: main.yml
roles/aws_controllers/meta/: main.yml
roles/aws_controllers/tasks/: aws_vbond_ec2_instance.yml  aws_vmanage_ec2_instance.yml  aws_wait_for_instances_readiness.yml  generate_deployment_facts.yml  main.yml
roles/aws_controllers/templates/: userdata_vbond.j2  userdata_vmanage.j2  userdata_vsmart.j2
roles/aws_device_params/: README.md
roles/aws_device_params/tasks/: aws_cedge_ec2_instance.yml  main.yml
roles/aws_edges/: README.md
roles/aws_edges/defaults/: main.yml
roles/aws_edges/meta/: main.yml
roles/aws_edges/tasks/: aws_cedge_ec2_instance.yml  aws_wait_for_instances_readiness.yml  generate_deployment_facts.yml  main.yml
roles/aws_edges/templates/: bootstrap_cedge.j2
roles/aws_edges/vars/: main.yml
roles/aws_network_infrastructure/: README.md
roles/aws_network_infrastructure/defaults/: main.yml
roles/aws_network_infrastructure/tasks/: aws_create_network_infrastructure.yml  aws_gather_network_resources.yml  main.yml
roles/aws_network_infrastructure/vars/: main.yml
roles/aws_teardown/: README.md
roles/azure_controllers/: README.md
roles/azure_device_params/: README.md
roles/azure_edges/: README.md
roles/azure_network_infrastructure/: README.md
roles/azure_teardown/: README.md
roles/common/: README.md
roles/template_cloudinit/: README.md
(+67 files in other folders)
