[tool.poetry]
name = "ansible-collection-sdwan-deployment"
version = "0.1.0"
description = "Ansible roles and playbooks for deploying and tearing down Cisco SD-WAN on AWS and Azure"
authors = ["acichon <acichon@cisco.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.4.0"
boto3 = "1.34.78"
botocore = "1.34.78"
msal = "1.27.0"
azure-cli-core = "^2.59.0"
azure-common = "^1.1.28"
azure-identity = "^1.15.0"
azure-mgmt-authorization = "^4.0.0"
azure-mgmt-apimanagement = "^4.0.1"
azure-mgmt-batch = "^17.3.0"
azure-mgmt-cdn = "^13.0.0"
azure-mgmt-compute = "^30.6.0"
azure-mgmt-containerinstance = "^10.1.0"
azure-mgmt-core = "^1.4.0"
azure-mgmt-containerregistry = "^10.3.0"
azure-containerregistry = "^1.2.0"
azure-mgmt-containerservice = "^29.1.0"
azure-mgmt-datalake-store = "^0.5.0"
azure-mgmt-datafactory = "^6.1.0"
azure-mgmt-dns = "^8.1.0"
azure-mgmt-marketplaceordering = "^1.1.0"
azure-mgmt-monitor = "^6.0.2"
azure-mgmt-managedservices = "^6.0.0"
azure-mgmt-managementgroups = "^1.0.0"
azure-mgmt-network = "^25.3.0"
azure-mgmt-nspkg = "^3.0.2"
azure-mgmt-privatedns = "^1.1.0"
azure-mgmt-redis = "^14.3.0"
azure-mgmt-resource = "^23.0.1"
azure-mgmt-rdbms = "^10.1.0"
azure-mgmt-search = "^9.1.0"
azure-mgmt-servicebus = "^8.2.0"
azure-mgmt-sql = "^3.0.1"
azure-mgmt-storage = "^21.1.0"
azure-mgmt-trafficmanager = "^1.1.0"
azure-mgmt-web = "^7.2.0"
azure-nspkg = "^3.0.2"
azure-storage-blob = "^12.19.1"
msrest = "^0.7.1"
azure-core = "^1.30.1"
msrestazure = "^0.6.4"
azure-keyvault = "^4.2.0"
azure-mgmt-keyvault = "^10.3.0"
azure-graphrbac = "^0.61.1"
azure-mgmt-cosmosdb = "^9.4.0"
azure-mgmt-hdinsight = "^9.0.0"
azure-mgmt-devtestlabs = "^9.0.0"
azure-mgmt-loganalytics = "^12.0.0"
azure-mgmt-automation = "^1.0.0"
azure-mgmt-iothub = "^3.0.0"
azure-mgmt-recoveryservices = "^2.5.0"
azure-mgmt-recoveryservicesbackup = "^9.0.0"
azure-mgmt-notificationhubs = "^8.0.0"
azure-mgmt-eventhub = "^11.0.0"
pre-commit = "^3.7.0"
netaddr = "^1.2.1"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^24.2.1", markers = "platform_system != 'Windows'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
